--- a/styles/style.css
+++ b/styles/style.css
@@ -139,8 +139,6 @@ hr {
   /* Company Tang */
 .tag{
     margin-top: 60px;
-    max-width: 1280px;
-    margin: 0 auto;
 }
 
 .tag > div{
@@ -153,4 +151,147 @@ hr {
 .tag div img{
     width: 90px;
 }
-  
+
+/* Popular Collection */
+.title{
+    color: rgb(58, 58, 58);
+    font-family: Poppins;
+    font-size: 28px;
+    font-weight: 600;
+    margin: 50px 0;
+}
+
+.popular{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    flex-direction: column;
+}
+
+.rating > span{
+    color: rgb(251, 130, 0);
+}
+
+#rate{
+    margin-left: 5px;
+    color: rgb(94, 99, 102);
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.card-info > h2{
+    color: rgb(24, 25, 31);
+    font-family: Poppins;
+    font-size: 28px;
+    font-weight: 500;
+}
+
+.card-info > h3{
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.text2{
+    width: 70%;
+}
+
+.card{
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    background: rgb(255, 255, 255);
+    padding: 18px 15px;
+}
+
+.card-container{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 40px;
+}
+
+.img-con{
+    overflow: hidden;
+    width: 100%;
+    border-radius: 8px;
+    display: inline-block;
+}
+
+.img-con > img{
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+}
+
+.img-con > img:hover{
+    transform: scale(1.1);
+}
+
+.btn2{
+    border: none;
+    color: rgb(224, 44, 109);
+    margin-top: 10px;
+    background: none;
+    float: right;
+}
+
+/* Featured products */
+
+.featured{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    gap: 60px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.featured button{
+    border-radius: 0px;
+    padding-right: 40px;
+    padding-left: 40px;
+}
+
+.featured .info{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+/* Footer Section */
+footer{
+    background-color: rgb(10, 8, 38);
+    color: white;
+}
+
+.foot{
+    max-width: 1280px;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+footer a{
+    color: white;
+    text-decoration: underline;
+}
+
+footer #social > img{
+    color: white;
+    background-color: white;
+    border-radius: 10px;
+    width: 28px;
+}
+
+#social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    gap: 15px;
+}
